Fix alignment and spacing in player styles

--- a/style.css
+++ b/style.css
@@ -56,8 +56,7 @@ header h1 {
     width: 200px;
   display: flex;
   flex-direction: rows;
-  
-  
+  align-items: normal;
     margin: auto;
     position: relative;
     left: 30 px;
